<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_title_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_init_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_init_game_player"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_fill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_fill_player"
        app:layout_constraintEnd_toEndOf="@+id/tv_init_game"
        app:layout_constraintStart_toStartOf="@+id/tv_init_game"
        app:layout_constraintTop_toBottomOf="@+id/tv_init_game" />

    <EditText
        android:id="@+id/etPlayer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_fill"
        app:layout_constraintStart_toStartOf="@+id/tv_fill"
        app:layout_constraintTop_toBottomOf="@+id/tv_fill" />

    <EditText
        android:id="@+id/etPlayer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/etPlayer1"
        app:layout_constraintStart_toStartOf="@+id/etPlayer1"
        app:layout_constraintTop_toBottomOf="@+id/etPlayer1" />

    <TextView
        android:id="@+id/tv_dev_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_dev_code_player"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_dev_code"
        app:layout_constraintEnd_toEndOf="@+id/tv_dev_code"
        app:layout_constraintStart_toStartOf="@+id/tv_dev_code"
        android:text="@string/btnStart_title_player"/>


</androidx.constraintlayout.widget.ConstraintLayout>