<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_title_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayerOneScore"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="center"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_team_x"
        app:layout_constraintEnd_toStartOf="@+id/tv_team_x"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="@+id/tv_team_x" />

    <TextView
        android:id="@+id/tv_team_x"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="X"
        android:textAlignment="center"
        android:textSize="72sp"
        app:layout_constraintEnd_toStartOf="@+id/tvPlayerTwoScore"
        app:layout_constraintStart_toEndOf="@+id/tvPlayerOneScore"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tvPlayerTwoScore"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="center"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_team_x"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toEndOf="@+id/tv_team_x"
        app:layout_constraintTop_toTopOf="@+id/tv_team_x" />

    <TextView
        android:id="@+id/tvPlayerOneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Casa"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayerOneScore" />

    <TextView
        android:id="@+id/tvPlayerTwoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Visitante"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvPlayerOneName"
        app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
        app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
        app:layout_constraintTop_toTopOf="@+id/tvPlayerOneName" />

    <Button
        android:id="@+id/btPlayerOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/btnPoint"
        app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
        app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayerOneName" />

    <Button
        android:id="@+id/btPlayerTwoScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPoint"
        app:layout_constraintBottom_toBottomOf="@+id/btPlayerOneScore"
        app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
        app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
        app:layout_constraintTop_toTopOf="@+id/btPlayerOneScore" />

    <Button
        android:id="@+id/btFinishMatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnFinishGame"
        app:layout_constraintEnd_toEndOf="@+id/btPlayerTwoScore"
        app:layout_constraintStart_toStartOf="@+id/btPlayerOneScore"
        app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore" />

    <Button
        android:id="@+id/btRevenge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnRevengeGame"
        app:layout_constraintEnd_toEndOf="@+id/btFinishMatch"
        app:layout_constraintStart_toStartOf="@+id/btFinishMatch"
        app:layout_constraintTop_toBottomOf="@+id/btFinishMatch" />

</androidx.constraintlayout.widget.ConstraintLayout>